syntax = "proto3";

package WeatherService;

service WeatherService {
  rpc GetCurrentWeather (CurrentWeatherRequest) returns (CurrentWeatherResponse);
  rpc GetWeatherForecast (WeatherForecastRequest) returns (WeatherForecastResponse);
  rpc ReportWeatherCondition (WeatherConditionRequest) returns (WeatherConditionResponse);
}

message CurrentWeatherRequest {
  string location = 1;
}

message CurrentWeatherResponse {
  float temperature = 1;
  float wet = 2;
  float WindSpeed = 3;
}

message WeatherForecastRequest {
  string location = 1;
}

message WeatherForecastResponse {
  repeated Forecast forecasts = 1;
}

message Forecast {
  string date = 1;
  float temperature = 2;
  float wet = 3;
  float WindSpeed = 4;
}

message WeatherConditionRequest {
  string location = 1;
  string condition = 2;
}

message WeatherConditionResponse {
  bool success = 1;
}
